force-app/main/default/objects/Salary__c/Salary__c.object-meta.xml
<CustomObject>
    <description>Organisation offer different packages for differenet technologies</description>
    <label>Salary</label>
    <nameField>
        <label>Salary</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Salaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>