force-app/main/default/objects/Salary__c/fields/Final_Value__c.field-meta.xml
<CustomField>
    <fullName>Final_Value__c</fullName>
    <formula>Net_Value__c  +  GST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>