force-app/main/default/objects/Salary__c/fields/Net_Value__c.field-meta.xml
<CustomField>
    <fullName>Net_Value__c</fullName>
    <formula>Amount__c  -  Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>